--- a/css/style.css
+++ b/css/style.css
@@ -1,33 +1,7 @@
-body {
-    font-family: sans-serif;
-    background-color: #111;
-    color: white;
-}
-
-a {
-    color: green;
-}
-
-.center {
-    text-align: center;
-}
-
-.center p, .center hr, .center h2 {
-    color: white;
-    margin-left: 15%;
-    margin-right: 15%;
-    text-align: left;
-}
-
-@media only screen and (max-width: 500px) {
-    .center p, .center hr, .center h2 {
-        margin-left: 5%;
-        margin-right: 5%;
-    }
-}
-
-@media only screen and (max-width: 870px) {
-    .center video {
-        width: 99%;
-    }
+video {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
 }
